# xaphan-daemon-galera

./: .gitignore  README.md  xaphan  xaphan_config_sample.yaml
xaphan-daemon/: requirements.txt  setup.cfg
xaphan-daemon/xaphan_daemon/: xaphandaemon.py
xaphan-daemon/xaphan_daemon/config_parser/: __init__.py  config_parser.py
xaphan-daemon/xaphan_daemon/daemon_logging/: __init__.py  daemon_logging.py
xaphan-daemon/xaphan_daemon/daemon_outputs/: __init__.py  daemon_outputs.py
xaphan-daemon/xaphan_daemon/galera_tests/: __init__.py  galera_tests.py
xaphan-lib/: daemon.py  xaphan.yaml  xaphandeamon.py
