[metadata]
name = xaphan-daemon
author = Mikolaj Niedbala
author-email = metatron@metatron.com.pl
summary = Galera node state daemon
description = Galera node state daemon
home-page = https://dev.metatron.com.pl/
license = GNU Library or Lesser General Public License (LGPL)
classifier =
    Programming Language :: Python,
    Programming Language :: Python :: 2,
    Development Status :: 4 - Beta,
    Environment :: Other Environment,
    Intended Audience :: Sysadmins,
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL),
    Operating System :: Unix / Linux,
keywords =
    setup
    distutils

[files]
packages = xaphan-daemon

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[entry_points]
console_scripts =
  xaphan_galera_daemon = xaphan_daemon.xaphandaemon:daemon_establish